# backend-agent

./: .env.example  README.md  api_examples.txt  docker-compose.yaml  main.py  pyproject.toml
app/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py  states.py  tools.py
app/common/: databases.py  models.py  utils.py
app/sql_graph/: graph.py  nodes.py  prompts.py  states.py  tools.py
backend/: .env.example  .gitignore  Dockerfile  api_examples.txt  database_schemas.sql  main.py  pyproject.toml
backend/app/: nodes.py  schemas.py  states.py  tools.py
backend/app/common/: databases.py  utils.py
backend/app/obs/: decorators.py  event_bus.py
backend/app/sql_graph/: graph.py  nodes.py  prompts.py  states.py
backend/tests/: test_list_users.py  test_login.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: GraphInspector.tsx
frontend/src/hooks/: useRunEvents.ts
tests/: test_list_users.py  test_login.py  test_register.py
