[project]
name = "auto-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.124.4",
  "langchain>=1.2.0",
  "langchain-community>=0.4.1",
  "langchain-ollama>=1.0.1",
  "langchain-openai>=1.1.4",
  "langgraph>=1.0.5",
  "pwdlib[argon2]>=0.3.0",
  "pygraphviz>=1.14",
  "pyjwt>=2.10.1",
  "sqlmodel>=0.0.27",
  "websockets>=15.0.1",
]

[dependency-groups]
dev = ["ipdb>=0.13.13", "ipython>=9.8.0", "pytest>=9.0.2", "duckdb>=1.4.3"]
